--- a/Project California Calling/index.html
+++ b/Project California Calling/index.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <div class="intro">
+            <div>
+                <img src="./assets/img/span.png" alt="">
+                <p>Elephant presents</p>
+                <p>CALIFORNIA</p>
+                <p>CALLING</p>
+                <p>Dedicated to the communities affected by the 2018 wildfires.</p>
+            </div>
+        </div>
+        <div class="bear">
+            <img src="./assets/img/bear.svg" alt="bear">
+            <a href="#RSVP">RSVP</a>
+        </div>
+    </header>
+
+    <section>
+        <h1>
+            Last year, nearly 2 <br>
+            million acres were <br>
+            devastated by the <br>
+            deadliest, most <br>
+            destructive wildfires in <br>
+            California history. <br>
+        </h1>
+        <article>
+            <div>
+            <p>Wildfires</p>
+            <p>8,527</p>
+            <p>Insurance Claim Damages</p>
+            <p>$12B</p>
+            <p>Acres Burned</p>
+            <p>1,893,913</p>
+        </div>
+        <div>
+            <img src="./assets/img/map.svg" alt="">
+        </div>
+        </article>
+
+    </section>
     
 </body>
 </html>
