--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         </div>
     </header>
 
-    <section>
+    <section id="RSVP" class="history">
         <h1>
-            Last year, nearly 2 <br>
-            million acres were <br>
-            devastated by the <br>
-            deadliest, most <br>
-            destructive wildfires in <br>
-            California history. <br>
+        Last year, nearly 2 <br>
+        million acres were <br>
+        devastated by the <br>
+        deadliest, most <br>
+        destructive wildfires in <br>
+        California history. <br>
         </h1>
         <article>
-            <div>
+        <div class="wild">
             <p>Wildfires</p>
             <p>8,527</p>
             <p>Insurance Claim Damages</p>
@@ -42,11 +42,20 @@
             <p>1,893,913</p>
         </div>
         <div>
-            <img src="./assets/img/map.svg" alt="">
+         <img src="./assets/img/map.svg" alt="">
         </div>
         </article>
-
     </section>
-    
+    <main class="middle">
+        <div class="photo1"><img src="./assets/img/action1.jpeg" alt="action1"></div>
+        <div class="photo2"><img src="./assets/img/action2.jpeg" alt="action2"></div>
+        <div class="txt1"><p><span>Stuck in<br>the middle.<br></span>Surrounded by smoke and inspired by the communities’ resilience, our design team reimagined the California Grizzly and used it to create custom tees, pins and posters.</p></div>
+        <div class="photo3"><img src="./assets/img/action3.jpeg" alt="action3"></div>
+        <div class="photo4"><img src="./assets/img/action4.jpeg" alt="action4"></div>
+        <div class="photo5"><img src="./assets/img/action5.jpeg" alt="action5"></div>
+        <div class="photo6"><img src="./assets/img/action6.jpeg" alt="action6"></div>
+        <div class="txt2"><p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our exclusive pop-up shop during our SF Design Week Studio Crawl this Friday, June 21. You can choose what amount to donate. All proceeds will go to the American Red Cross to help the communities that are still displaced.</p></div>
+        <div class="photo7"><img src="./assets/img/action7.jpeg" alt="action7"></div>
+    </main>    
 </body>
 </html>
