--- a/index.html
+++ b/index.html
@@ -41,13 +41,10 @@
             <p>Acres Burned</p>
             <p>1,893,913</p>
             </div>
-            <div>
             <img src="./assets/img/map.svg" alt="">
-             </div>
         </div>
-
     </section>
-    <main class="middle">
+    <section class="middle">
         <div class="photo1"><img src="./assets/img/action1.jpeg" alt="action1"></div>
         <div class="photo2"><img src="./assets/img/action2.jpeg" alt="action2"></div>
         <div class="txt1"><p><span>Stuck in<br>the middle.<br></span>Surrounded by smoke and inspired by the communities’ resilience, our design team reimagined the California Grizzly and used it to create custom tees, pins and posters.</p></div>
@@ -57,6 +54,89 @@
         <div class="photo6"><img src="./assets/img/action6.jpeg" alt="action6"></div>
         <div class="txt2"><p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our exclusive pop-up shop during our SF Design Week Studio Crawl this Friday, June 21. You can choose what amount to donate. All proceeds will go to the American Red Cross to help the communities that are still displaced.</p></div>
         <div class="photo7"><img src="./assets/img/action7.jpeg" alt="action7"></div>
-    </main>    
+    </section>
+    <section class="goldbear">
+
+        <div class="artist">
+            <div class="txt3">
+                <p>001</p>
+                <p>The</p>
+                <p>Golden</p>
+                <p>Bear</p>
+            </div>
+            <div class="txt4">
+                <p>The This design is all about the resilience of California to overcome difficult situations and come out stronger than before. It’s a flip of the UNC Tarheel mascot with added elements like the California poppy. Golden Bear</p>
+                <p><span>— Kevin Lam, Artist</span></p>
+            </div>   
+        </div>
+
+        <div class="bear2">
+            <div>
+                <img class="bild1" src="./assets/img/goldenbear.png" alt="goldbear">
+            </div>
+            <div>
+                <img class="bild2" src="./assets/img/gb2.png" alt="goldbear2">
+            </div>
+            <div class="circle">
+                <img src="./assets/img/cc-circle-2.png" alt="circle">
+            </div>
+        </div>
+
+    </section>
+
+    <section class="poppy">
+        <div class="artist">
+            <div class="txt3">
+                <p>002</p>
+                <p>The</p>
+                <p>Poppy</p>
+                <p>Bear</p>
+            </div>
+            <div class="txt4">
+                <p>This design is inspired by the quote ‘grow through what you go through’ and represents the strength of Californians and how we will continue to thrive, regardless of what knocks us down.<p>
+                <span>— Alyssa Wigant, Artist</span></p>
+            </div>   
+        </div>
+        <div>
+            <img class="img2" src="./assets/img/pb3.png" alt="Bear in Hand">
+        </div>
+        <div>
+            <img class="img1" src="./assets/img/rosebear.png" alt="Rosenbear">
+        </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="footertxt1">
+            <p>Join us</p>
+            <p>Mark your calendar for our SF Design Week Studio Crawl. In addition to custom swag, we’ll also have a DJ, a mixologist, and other cool surprises we can’t tell you about yet.</p>
+            <div><a href="#RSVP">RSVP</a></div>
+        </div>
+
+        <div><img src="./assets/img/" alt=""></div>
+
+        <div class="footeranimation">
+            <div class="footeranimation1">
+            <p><span>2019</span> JUNE 21, <span>2019</span> JUNE <span>2019</span> JUNE 21, <span>2019</span> JUNE</p>
+        </div>
+        </div>
+
+        <div class="footerimg">
+            <div>
+                <img class="social" src="./assets/img/fb.png" alt="fb">
+                <img class="social" src="./assets/img/ig.png" alt="ig">
+                <img class="social" src="./assets/img/li.png" alt="li">
+                <p>Elmin Hasanov SUPERCODE Project</p>
+                <p>2025</p>
+            </div>
+    
+            <div>
+                <img class="help" src="./assets/img/sfdw-logo.png" alt="sfdw-logo">
+                <img class="help" src="./assets/img/ngo-logo.png" alt="ngo-logo">
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
